--- a/part1.html
+++ b/part1.html
@@ -14,16 +14,23 @@
 
 <script type="text/javascript">
 
-    var config = {
-        type: Phaser.AUTO,
-        width: 800,
-        height: 600,
-        scene: {
-            preload: preload,
-            create: create,
-            update: update
+var config = {
+    type: Phaser.AUTO,
+    width: 800,
+    height: 600,
+    physics: {
+        default: 'arcade',
+        arcade: {
+            gravity: { y: 300 },
+            debug: false
         }
-    };
+    },
+    scene: {
+        preload: preload,
+        create: create,
+        update: update
+    }
+};
 
     var game = new Phaser.Game(config);
 
@@ -39,18 +46,22 @@
     );
     }
 
-    function create ()
-    {
-        this.add.image(400, 300, 'sky');
+    var platforms;
 
-        platforms = this.physics.add.staticGroup();
+function create ()
+{
+    this.add.image(400, 300, 'sky');
 
-        platforms.create(400, 568, 'ground').setScale(2).refreshBody();
+    platforms = this.physics.add.staticGroup();
 
-        platforms.create(600, 400, 'ground');
-        platforms.create(50, 250, 'ground');
-       platforms.create(750, 220, 'ground');
-    }
+    platforms.create(400, 568, 'ground').setScale(2).refreshBody();
+
+    platforms.create(600, 400, 'ground');
+    platforms.create(50, 250, 'ground');
+    platforms.create(750, 220, 'ground');
+}
+
+
 
     function update ()
     {
