--- a/part1.html
+++ b/part1.html
@@ -50,6 +50,7 @@ var config = {
 
 function create ()
 {
+    //plateform
     this.add.image(400, 300, 'sky');
 
     platforms = this.physics.add.staticGroup();
@@ -59,7 +60,7 @@ function create ()
     platforms.create(600, 400, 'ground');
     platforms.create(50, 250, 'ground');
     platforms.create(750, 220, 'ground');
-
+//player sprite
     player = this.physics.add.sprite(100, 450, 'dude');
 
 player.setBounce(0.2);
@@ -94,6 +95,8 @@ stars = this.physics.add.group({
     setXY: { x: 12, y: 0, stepX: 70 }
 });
 
+//creating stars to collect
+
 stars.children.iterate(function (child) {
 
     child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
@@ -106,12 +109,19 @@ this.physics.add.overlap(player, stars, collectStar, null, this);
 function collectStar (player, star)
 {
     star.disableBody(true, true);
+
+    score += 10;
+    scoreText.setText('Score: ' + score);
 }
+//score test
+var score = 0;
+var scoreText;
+scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 }
 
 
 
-
+//create animation for player
     function update ()
     {
         if (cursors.left.isDown)
