--- a/part1.html
+++ b/part1.html
@@ -117,6 +117,9 @@ function collectStar (player, star)
 var score = 0;
 var scoreText;
 scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
+
+//ennemies
+
 }
 
 
