--- a/part1.html
+++ b/part1.html
@@ -50,6 +50,7 @@ var config = {
 
 function create ()
 {
+    
     //plateform
     this.add.image(400, 300, 'sky');
 
@@ -95,6 +96,7 @@ stars = this.physics.add.group({
     setXY: { x: 12, y: 0, stepX: 70 }
 });
 
+
 //creating stars to collect
 
 stars.children.iterate(function (child) {
@@ -106,20 +108,54 @@ stars.children.iterate(function (child) {
 this.physics.add.collider(stars, platforms);
 
 this.physics.add.overlap(player, stars, collectStar, null, this);
+
 function collectStar (player, star)
 {
     star.disableBody(true, true);
 
     score += 10;
     scoreText.setText('Score: ' + score);
+
+    if (stars.countActive(true) === 0)
+    {
+        stars.children.iterate(function (child) {
+
+            child.enableBody(true, child.x, 0, true, true);
+
+        });
+
+        var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
+
+        var bomb = bombs.create(x, 16, 'bomb');
+        bomb.setBounce(1);
+        bomb.setCollideWorldBounds(true);
+        bomb.setVelocity(Phaser.Math.Between(-200, 200), 20);
+
+    }
 }
+
+
 //score test
 var score = 0;
 var scoreText;
 scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 
-//ennemies
+//bombs
+bombs = this.physics.add.group();
 
+this.physics.add.collider(bombs, platforms);
+
+this.physics.add.collider(player, bombs, hitBomb, null, this);
+function hitBomb (player, bomb)
+{
+    this.physics.pause();
+
+    player.setTint(0xff0000);
+
+    player.anims.play('turn');
+
+    gameOver = true;
+}
 }
 
 
