--- a/part1.html
+++ b/part1.html
@@ -37,7 +37,7 @@
     <!--Game-->
     
     
-    <div class="game">
+
         <script type="text/javascript">
 
 var config = {
@@ -215,9 +215,9 @@ if (cursors.up.isDown && player.body.touching.down)
     }
 
 </script>
-</div>
+
 
 <!--audio test-->
-<div><audio src="assets/8 bit music.mp3" controls></audio></div>
+<div class="music"><audio src="assets/8 bit music.mp3" controls></audio></div>
 </body>
 </html>
