--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
     <meta charset="UTF-8" />
-    <title>Game with phaser tuto</title>
+    <title>Game  test</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <style type="text/css">
         body {
@@ -67,7 +67,7 @@ var config = {
         this.load.image('star', 'assets/star.png');
         this.load.image('bomb', 'assets/bomb.png');
         this.load.spritesheet('dude', 
-        'assets/dude.png',
+        'assets/test.png',
         { frameWidth: 32, frameHeight: 48 }
     );
     }
