--- a/test.html
+++ b/test.html
@@ -62,12 +62,12 @@ var config = {
 
     function preload ()
     {
-        this.load.image('sky', 'assets/sky.png');
-        this.load.image('ground', 'assets/platform.png');
+        this.load.image('sky', 'assets/sky2.png');
+        this.load.image('ground', 'assets/platform2.png');
         this.load.image('star', 'assets/star.png');
-        this.load.image('bomb', 'assets/bomb.png');
+        this.load.image('bomb', 'assets/bomb2.png');
         this.load.spritesheet('dude', 
-        'assets/test.png',
+        'assets/dude.png',
         { frameWidth: 32, frameHeight: 48 }
     );
     }
@@ -218,6 +218,6 @@ if (cursors.up.isDown && player.body.touching.down)
 
 
 <!--audio test-->
-<div class="music"><audio src="assets/8 bit music.mp3" controls></audio></div>
+<div class="music"><audio src="assets/petales japan.mp3" controls></audio></div>
 </body>
 </html>
