--- a/test.html
+++ b/test.html
@@ -67,7 +67,7 @@ var config = {
         this.load.image('star', 'assets/star.png');
         this.load.image('bomb', 'assets/bomb2.png');
         this.load.spritesheet('dude', 
-        'assets/dude.png',
+        'assets/dude2.png',
         { frameWidth: 32, frameHeight: 48 }
     );
     }
