--- a/test.html
+++ b/test.html
@@ -64,7 +64,7 @@ var config = {
     {
         this.load.image('sky', 'assets/sky2.png');
         this.load.image('ground', 'assets/platform2.png');
-        this.load.image('star', 'assets/star.png');
+        this.load.image('star', 'assets/cherryflower.png');
         this.load.image('bomb', 'assets/bomb2.png');
         this.load.spritesheet('dude', 
         'assets/dude2.png',
