--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <!--nav-->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Making game with phaser is fun</a>
+        <a class="navbar-brand" href="#">My games</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Tutorial game <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Tutorial game with phaser<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="test.html">Game with my design</a>
+              <a class="nav-link" href="test.html">Sakura's night</a>
             </li>
            
           </ul>
