--- a/test.html
+++ b/test.html
@@ -11,9 +11,9 @@
     </style>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/styles.css">
-    <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -24,17 +24,17 @@
     <!--nav-->
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Making game with phaser is fun</a>
+        <a class="navbar-brand" href="#">My games</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Tutorial game <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Tutorial game with phaser <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="test.html">Game with my design</a>
+              <a class="nav-link" href="test.html">Sakura's night</a>
             </li>
            
           </ul>
@@ -47,6 +47,8 @@
 
         <script type="text/javascript">
 
+        
+
 var config = {
     type: Phaser.AUTO,
     width: 800,
@@ -56,7 +58,7 @@ var config = {
         arcade: {
             gravity: { y: 300 },
             debug: false
-        }
+        },
     },
     scene: {
         preload: preload,
@@ -220,6 +222,7 @@ if (cursors.up.isDown && player.body.touching.down)
     player.setVelocityY(-330);
 }
     }
+//test version mobile
 
 
 </script>
