--- a/test.html
+++ b/test.html
@@ -234,7 +234,7 @@ function hitBomb (player, bomb)
 <div class="music"><audio src="assets/petales-japan.mp3" controls></audio></div>
 
 <!--Restart Button-->
-<button>Restart</button>
+<button onClick="window.location.reload();">Restart</button>
 
 <footer>
     <a href="https://www.linkedin.com/in/maureen-marchal/" target="_blank"><i class="fab fa-linkedin fa-2x icon" ></i></a>
